[gd_scene load_steps=44 format=2]

[ext_resource path="res://material/locate.mesh" type="ArrayMesh" id=1]
[ext_resource path="res://script/full_screen.gd" type="Script" id=2]
[ext_resource path="res://script/fade_out.gd" type="Script" id=3]
[ext_resource path="res://scene/Info.tscn" type="PackedScene" id=4]
[ext_resource path="res://script/camera.gd" type="Script" id=5]
[ext_resource path="res://default_env.tres" type="Environment" id=6]
[ext_resource path="res://scene/Setting.tscn" type="PackedScene" id=7]
[ext_resource path="res://material/board.tres" type="ArrayMesh" id=8]
[ext_resource path="res://scene/GamePanel.tscn" type="PackedScene" id=9]
[ext_resource path="res://scene/GameOver.tscn" type="PackedScene" id=10]
[ext_resource path="res://script/light.gd" type="Script" id=11]
[ext_resource path="res://picture/fullscreen.png" type="Texture" id=12]
[ext_resource path="res://picture/fullscreen_hover.png" type="Texture" id=13]
[ext_resource path="res://picture/setting.png" type="Texture" id=14]
[ext_resource path="res://picture/setting_hover.png" type="Texture" id=15]
[ext_resource path="res://material/wood_512x512.png" type="Texture" id=16]
[ext_resource path="res://scene/FpsDisplay.tscn" type="PackedScene" id=17]
[ext_resource path="res://script/board.gd" type="Script" id=18]
[ext_resource path="res://script/world_environment.gd" type="Script" id=19]
[ext_resource path="res://theme/default_theme.tres" type="Theme" id=20]
[ext_resource path="res://script/board_mesh.gd" type="Script" id=21]
[ext_resource path="res://picture/black.png" type="Texture" id=22]
[ext_resource path="res://picture/icon.png" type="Texture" id=23]
[ext_resource path="res://scene/Pass.tscn" type="PackedScene" id=24]
[ext_resource path="res://picture/info_hover.png" type="Texture" id=25]
[ext_resource path="res://picture/white.png" type="Texture" id=26]
[ext_resource path="res://theme/fonts/Boku2-Regular.otf" type="DynamicFontData" id=27]
[ext_resource path="res://theme/fonts/AnonymousPro-Regular.ttf" type="DynamicFontData" id=28]
[ext_resource path="res://script/ai_thinking_label.gd" type="Script" id=29]
[ext_resource path="res://picture/undo.png" type="Texture" id=30]
[ext_resource path="res://picture/undo_hover.png" type="Texture" id=31]
[ext_resource path="res://picture/user_hover.png" type="Texture" id=32]
[ext_resource path="res://picture/user.png" type="Texture" id=33]
[ext_resource path="res://scene/SetBoard.tscn" type="PackedScene" id=34]

[sub_resource type="Skin" id=2]

[sub_resource type="BoxShape" id=12]
extents = Vector3( 0.579763, 0.001, 0.57882 )

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=18]
resource_name = "新增動畫"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 0.5, 0.5, 0.5 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0.02, 0 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="DynamicFont" id=20]
size = 28
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 28 )
fallback/0 = ExtResource( 27 )

[sub_resource type="DynamicFont" id=19]
size = 48
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 28 )
fallback/0 = ExtResource( 27 )

[sub_resource type="Animation" id=6]
resource_name = "fade_out"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2.5, 2.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0.501961 ), Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="CubeMesh" id=5]

[sub_resource type="SpatialMaterial" id=3]
albedo_texture = ExtResource( 16 )
roughness = 0.8
uv1_scale = Vector3( 25, 25, 1 )

[node name="GameScene" type="Spatial"]

[node name="Board" type="StaticBody" parent="."]
script = ExtResource( 18 )

[node name="Mesh" type="MeshInstance" parent="Board"]
transform = Transform( 0.4, 0, 0, 0, 0.03, 0, 0, 0, 0.4, 0, 0, 0 )
mesh = ExtResource( 8 )
skin = SubResource( 2 )
skeleton = NodePath("")
material/0 = null
material/1 = null
script = ExtResource( 21 )

[node name="CollisionShape" type="CollisionShape" parent="Board"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.041, 0 )
shape = SubResource( 12 )

[node name="Locater" type="Spatial" parent="Board"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.04631, 0 )

[node name="Mesh" type="MeshInstance" parent="Board/Locater"]
transform = Transform( 0.06, 0, 0, 0, 0.01, 0, 0, 0, 0.06, 0, 0, 0 )
mesh = ExtResource( 1 )
material/0 = null

[node name="Floater" type="AnimationPlayer" parent="Board/Locater"]
root_node = NodePath("../Mesh")
autoplay = "新增動畫"
anims/RESET = SubResource( 1 )
"anims/新增動畫" = SubResource( 18 )

[node name="Stones" type="Spatial" parent="Board"]

[node name="Hints" type="Spatial" parent="Board"]

[node name="HTTPRequest" type="HTTPRequest" parent="Board"]

[node name="Camera" type="Camera" parent="."]
transform = Transform( 0.920505, -0.338383, 0.195365, 0, 0.5, 0.866026, -0.390731, -0.797181, 0.460252, 3.82307, 4.42558, 5.12161 )
script = ExtResource( 5 )

[node name="Light" type="DirectionalLight" parent="."]
transform = Transform( -0.141142, 0.672691, 0.726337, 0.760693, -0.395855, 0.514436, 0.633581, 0.625128, -0.45584, 2.94489, 1.56008, -2.14599 )
light_energy = 0.6
directional_shadow_blend_splits = true
directional_shadow_normal_bias = 0.0
script = ExtResource( 11 )

[node name="Thinking" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -143.5
margin_top = 15.0
margin_right = 143.5
margin_bottom = 44.0
size_flags_horizontal = 3
theme = ExtResource( 20 )
custom_fonts/font = SubResource( 20 )
text = "AIThinking"
align = 1
script = ExtResource( 29 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HUD" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -220.0
margin_right = 350.0
margin_bottom = 143.0
theme = ExtResource( 20 )
custom_constants/separation = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Turn" type="Label" parent="HUD"]
margin_right = 350.0
margin_bottom = 49.0
size_flags_horizontal = 3
theme = ExtResource( 20 )
custom_fonts/font = SubResource( 19 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Black" type="VBoxContainer" parent="HUD"]
margin_top = 99.0
margin_right = 350.0
margin_bottom = 206.0
size_flags_horizontal = 3

[node name="HBox" type="HBoxContainer" parent="HUD/Black"]
margin_right = 350.0
margin_bottom = 60.0
alignment = 1

[node name="Black" type="TextureRect" parent="HUD/Black/HBox"]
margin_left = 145.0
margin_right = 205.0
margin_bottom = 60.0
size_flags_horizontal = 0
texture = ExtResource( 22 )

[node name="BlackCount" type="Label" parent="HUD/Black"]
margin_top = 64.0
margin_right = 350.0
margin_bottom = 107.0
size_flags_horizontal = 3
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="White" type="VBoxContainer" parent="HUD"]
margin_top = 256.0
margin_right = 350.0
margin_bottom = 363.0
size_flags_horizontal = 3

[node name="HBox" type="HBoxContainer" parent="HUD/White"]
margin_right = 350.0
margin_bottom = 60.0
alignment = 1

[node name="White" type="TextureRect" parent="HUD/White/HBox"]
margin_left = 145.0
margin_right = 205.0
margin_bottom = 60.0
size_flags_horizontal = 0
texture = ExtResource( 26 )

[node name="WhiteCount" type="Label" parent="HUD/White"]
margin_top = 64.0
margin_right = 350.0
margin_bottom = 107.0
size_flags_horizontal = 3
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -280.0
margin_top = 15.0
margin_right = -20.0
margin_bottom = 65.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Regret" type="TextureButton" parent="Buttons"]
margin_right = 50.0
margin_bottom = 50.0
focus_mode = 0
theme = ExtResource( 20 )
enabled_focus_mode = 0
texture_normal = ExtResource( 30 )
texture_hover = ExtResource( 31 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGameBtn" type="TextureButton" parent="Buttons"]
margin_left = 70.0
margin_right = 120.0
margin_bottom = 50.0
focus_mode = 0
size_flags_horizontal = 3
theme = ExtResource( 20 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
texture_normal = ExtResource( 33 )
texture_hover = ExtResource( 32 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingBtn" type="TextureButton" parent="Buttons"]
margin_left = 140.0
margin_right = 190.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 76.6936, 76.3162 )
focus_mode = 0
size_flags_horizontal = 3
shortcut_in_tooltip = false
enabled_focus_mode = 0
texture_normal = ExtResource( 14 )
texture_hover = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoBtn" type="TextureButton" parent="Buttons"]
margin_left = 210.0
margin_right = 260.0
margin_bottom = 50.0
focus_mode = 0
size_flags_horizontal = 3
enabled_focus_mode = 0
texture_normal = ExtResource( 23 )
texture_hover = ExtResource( 25 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FullScreenBtn" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -57.0
margin_top = -57.0
margin_right = -7.0
margin_bottom = -7.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 12 )
texture_hover = ExtResource( 13 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SetBoardBtn" type="TextureButton" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = -298.0
margin_right = 13.0
margin_bottom = -285.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadeOut" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -360.0
margin_right = 640.0
margin_bottom = 360.0
color = Color( 0, 0, 0, 0 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fade" type="AnimationPlayer" parent="FadeOut"]
autoplay = "fade_out"
anims/fade_out = SubResource( 6 )

[node name="GamePanel" parent="." instance=ExtResource( 9 )]

[node name="Setting" parent="." instance=ExtResource( 7 )]

[node name="Info" parent="." instance=ExtResource( 4 )]

[node name="GameOver" parent="." instance=ExtResource( 10 )]

[node name="Pass" parent="." instance=ExtResource( 24 )]

[node name="SetBoard" parent="." instance=ExtResource( 34 )]
margin_left = 640.0
margin_right = 1920.0

[node name="bottom" type="MeshInstance" parent="."]
transform = Transform( 9, 0, 0, 0, 0.2, 0, 0, 0, 9, 0, -0.318334, 0 )
mesh = SubResource( 5 )
material/0 = SubResource( 3 )

[node name="FpsDisplay" parent="." instance=ExtResource( 17 )]
margin_right = -1280.0
margin_bottom = -718.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 6 )
script = ExtResource( 19 )

[connection signal="request_completed" from="Board/HTTPRequest" to="Board" method="_on_HTTPRequest_request_completed"]
[connection signal="camera_on_position" from="Camera" to="GamePanel" method="_on_Camera_on_position"]
[connection signal="pressed" from="Buttons/Regret" to="Board" method="_on_Regret_pressed"]
[connection signal="pressed" from="Buttons/NewGameBtn" to="GamePanel" method="_on_NewGameBtn_pressed"]
[connection signal="pressed" from="Buttons/SettingBtn" to="Setting" method="_on_SettingBtn_pressed"]
[connection signal="pressed" from="Buttons/InfoBtn" to="Info" method="_on_InfoBtn_pressed"]
[connection signal="pressed" from="SetBoardBtn" to="SetBoard" method="_on_SetBoardBtn_pressed"]
[connection signal="animation_finished" from="FadeOut/Fade" to="FadeOut" method="_on_Fade_animation_finished"]
[connection signal="game_start" from="GamePanel" to="Board" method="_on_game_start"]
[connection signal="animation_change" from="Setting" to="Board" method="_on_animation_change"]
[connection signal="hint_change" from="Setting" to="Board" method="_on_Setting_hint_change"]
[connection signal="quality_change" from="Setting" to="WorldEnvironment" method="_on_Setting_quality_change"]
[connection signal="shadow_change" from="Setting" to="Light" method="_on_Setting_shadow_change"]
[connection signal="texture_change" from="Setting" to="Board" method="_on_texture_change"]
[connection signal="show_newgame_panel" from="GameOver" to="GamePanel" method="_on_GameOver_show_newgame_panel"]
[connection signal="assign_board" from="SetBoard" to="Board" method="_on_SetBoard_assign_board"]
